--- a/WorldEditor.ini
+++ b/WorldEditor.ini
@@ -12,12 +12,16 @@ CAPA3=1
 CAPA4=0
 CONTROLAUTOMATICO=1
 GRILLA=0
-LASTPOS=39-50
+LASTPOS=56-11
 NPCS=1
 OBJETOS=1
 TRANSLADOS=1
 TRIGGERS=1
 
 [PATH]
-ULTIMOMAPA=C:\Users\Jopi\Desktop\WE LWK DX8\Conversor\Mapas Integer\Mapa1.map
+ULTIMOMAPA=
+
+[RENDER]
+CLIENTEHEIGHT=19
+CLIENTEWIDTH=25
 
