Fix parametro de mas.

--- a/WorldEditor.ini
+++ b/WorldEditor.ini
@@ -1,27 +1,27 @@
 [CONFIGURACION]
-AUTOCAPTURARSUP=0
-AUTOCAPTURARTRANS=1
-GUARDARCONFIG=1
-OBJTRANSLADO=378
-UTILIZARDESHACER=1
+AutoCapturarSup=0
+AutoCapturarTrans=1
+GuardarConfig=1
+ObjTranslado=378
+UtilizarDeshacer=1
 
 [MOSTRAR]
-BLOQUEOS=0
-CAPA2=1
-CAPA3=1
-CAPA4=0
-CONTROLAUTOMATICO=1
-GRILLA=0
-LASTPOS=56-11
-NPCS=1
-OBJETOS=1
-TRANSLADOS=1
-TRIGGERS=1
+Bloqueos=0
+Capa4=0
+Capa3=1
+Capa2=1
+ControlAutomatico=1
+Grilla=0
+LastPos=50-50
+NPCs=1
+Objetos=1
+Triggers=1
+Translados=1
 
 [PATH]
-ULTIMOMAPA=
+UltimoMapa=
 
 [RENDER]
-CLIENTEHEIGHT=19
-CLIENTEWIDTH=25
+ClienteHeight=19
+ClienteWidth=25
 
