--- a/GrhIndex/indices.ini
+++ b/GrhIndex/indices.ini
@@ -667,14 +667,12 @@ GrhIndice=99
 Ancho=0
 Alto=0
 Capa=3
-
 [REFERENCIA111]
 Nombre=(Animación)(Barco Pirata)
 GrhIndice=18274
 Ancho=0
 Alto=0
 Capa=3
-
 [REFERENCIA112]
 Nombre=(CASA) RUINAS ARRIBA
 GrhIndice=5596
@@ -711,23 +709,23 @@ GrhIndice=5601
 Ancho=0
 Alto=0
 [REFERENCIA118]
-Nombre=(Columna)(Ruina)
+Nombre=(DUNGEON)(Malaheing) Columna
 GrhIndice=18270
 Ancho=0
 Alto=0
 Capa=3
 [REFERENCIA119]
-Nombre=(Columna)(Ruina)
+Nombre=(DUNGEON)(Malaheing) Columna
 GrhIndice=18269
 Ancho=0
 Alto=0
 Capa=3
 [REFERENCIA120]
-Nombre=(Columna)(Ruina)
+Nombre=(DUNGEON)(Malaheing) Columna
 GrhIndice=18268
 Ancho=0
 Alto=0
-Capa=3
+Capa=1
 [REFERENCIA121]
 Nombre=(Catas)(Barro)(Pared)
 GrhIndice=18690
@@ -735,7 +733,7 @@ Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA122]
-Nombre=(Catas)(Piso)
+Nombre=(Catas)(Barro)(Piso)
 GrhIndice=18674
 Ancho=4
 Alto=4
@@ -788,7 +786,6 @@ GrhIndice=7704
 Ancho=4
 Alto=4
 Capa=1
-
 [REFERENCIA131]
 Nombre=(Catas)(Barro)(Pared)
 GrhIndice=18642
@@ -801,7 +798,6 @@ GrhIndice=18626
 Ancho=4
 Alto=4
 Capa=1
-
 [REFERENCIA133]
 Nombre=(Catas)(Barro)(Pared)
 GrhIndice=18610
@@ -814,7 +810,6 @@ GrhIndice=18594
 Ancho=4
 Alto=4
 Capa=1
-
 [REFERENCIA135]
 Nombre=(Catas)(Barro)(Esquina)
 GrhIndice=18578
@@ -833,7 +828,6 @@ GrhIndice=1505
 Ancho=4
 Alto=4
 Capa=1
-
 [REFERENCIA138]
 Nombre=(Animación)(FOGATA)
 GrhIndice=1521
@@ -1099,7 +1093,11 @@ Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA182]
-
+Nombre=(MONUMENTO)(Obelisco)
+GrhIndice=20165
+Ancho=0
+Alto=0
+Capa=3
 [REFERENCIA183]
 Nombre=(DESFILADERO)(Esquina)
 GrhIndice=7524
@@ -1480,7 +1478,6 @@ GrhIndice=7704
 Ancho=4
 Alto=4
 Capa=1
-
 [REFERENCIA246]
 Nombre=(Dungeon Nevado Curva 1)1
 GrhIndice=7736
@@ -2358,7 +2355,11 @@ Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA392]
-
+Nombre=(MONUMENTO)(Obelisco)
+GrhIndice=20166
+Ancho=0
+Alto=0
+Capa=3
 [REFERENCIA393]
 Nombre=(Ancient Dungeon)(Piso)
 GrhIndice=9428
@@ -3351,13 +3352,17 @@ Ancho=0
 Alto=0
 Capa=3
 [REFERENCIA556]
-
+Nombre=(ROCA)()
+GrhIndice=7508
+Ancho=4
+Alto=4
+Capa=1
 [REFERENCIA557]
 Nombre=Pasto Sobresalido
-GrhIndice=1493
+GrhIndice=20167
 Ancho=1
 Alto=1
-Capa=1
+Capa=3
 [REFERENCIA558]
 Nombre=Entrada Infierno
 GrhIndice=1812
@@ -4073,9 +4078,17 @@ Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA676]
-
+Nombre=(MONUMENTO)(Piramide)
+GrhIndice=20168
+Ancho=0
+Alto=0
+Capa=3
 [REFERENCIA677]
-
+Nombre=(ENTRADA)(Caos)
+GrhIndice=20169
+Ancho=0
+Alto=0
+Capa=3
 [REFERENCIA678]
 Nombre=Cartel Chico Banderbille
 GrhIndice=26094
@@ -4083,29 +4096,77 @@ Ancho=0
 Alto=0
 Capa=3
 [REFERENCIA679]
-
+Nombre=(Monumento)(Torre)
+GrhIndice=20170
+Ancho=0
+Alto=0
+Capa=3
 [REFERENCIA680]
-
+Nombre=(Monumento)(Torre)
+GrhIndice=20171
+Ancho=0
+Alto=0
+Capa=3
 [REFERENCIA681]
-
+Nombre=(Horno)(tipo panaderia)
+GrhIndice=20172
+Ancho=0
+Alto=0
+Capa=3
 [REFERENCIA682]
-
+Nombre=(DUNGEON)(Malaheing)1 grafico esquina
+GrhIndice=18260
+Ancho=0
+Alto=0
+Capa=1
 [REFERENCIA683]
-
+Nombre=(DUNGEON)(Malaheing)1 grafico esquina
+GrhIndice=18261
+Ancho=0
+Alto=0
+Capa=1
 [REFERENCIA684]
-
+Nombre=(DUNGEON)(Malaheing)1 grafico esquina
+GrhIndice=18262
+Ancho=0
+Alto=0
+Capa=1
 [REFERENCIA685]
-
+Nombre=(DUNGEON)(Malaheing)1 grafico esquina
+GrhIndice=18263
+Ancho=0
+Alto=0
+Capa=1
 [REFERENCIA686]
-
+Nombre=(DUNGEON)(Malaheing)1 grafico Costado
+GrhIndice=18264
+Ancho=0
+Alto=0
+Capa=1
 [REFERENCIA687]
-
+Nombre=(DUNGEON)(Malaheing)1 grafico Costado
+GrhIndice=18265
+Ancho=0
+Alto=0
+Capa=1
 [REFERENCIA688]
-
+Nombre=(DUNGEON)(Malaheing)1 grafico Costado
+GrhIndice=18266
+Ancho=0
+Alto=0
+Capa=1
 [REFERENCIA689]
-
+Nombre=(DUNGEON)(Malaheing)1 grafico Costado
+GrhIndice=18267
+Ancho=0
+Alto=0
+Capa=1
 [REFERENCIA690]
-
+Nombre=(CEMENTERIO)(Rejas) Medio Mal Index
+GrhIndice=17974
+Ancho=0
+Alto=0
+Capa=3
 [REFERENCIA691]
 Nombre=(DESIERTO) Piraminde
 GrhIndice=1331
@@ -4683,9 +4744,17 @@ Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA787]
-
+Nombre=(CEMENTERIO)(Rejas) Esquina Mal Index
+GrhIndice=17975
+Ancho=0
+Alto=0
+Capa=3
 [REFERENCIA788]
-
+Nombre=(CEMENTERIO)(Rejas) Esquina Mal Index
+GrhIndice=17973
+Ancho=0
+Alto=0
+Capa=3
 [REFERENCIA789]
 Nombre=(Monumento)(Piramide)
 GrhIndice=1331
@@ -4695,6 +4764,510 @@ Capa=3
 [REFERENCIA790]
 Nombre=(Entrada)(Dungeon)
 GrhIndice=22078
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA791]
+Nombre=(CEMENTERIO)(Rejas) Costado Mal Index
+GrhIndice=17976
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA792]
+Nombre=(CEMENTERIO)(Rejas) Esquina Mal Index
+GrhIndice=17972
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA793]
+Nombre=(CEMENTERIO)(Rejas) Costado Mal Index
+GrhIndice=17977
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA794]
+Nombre=(CEMENTERIO)(Rejas) Esquina Mal Index
+GrhIndice=17971
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA795]
+Nombre=(CEMENTERIO)(Rejas) Costado Mal Index
+GrhIndice=17978
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA796]
+Nombre=(CEMENTERIO)(Rejas) Entrada Mal Index
+GrhIndice=17970
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA797]
+Nombre=(CEMENTERIO)(Rejas) Entrada Mal Index
+GrhIndice=17969
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA798]
+Nombre=(CEMENTERIO)(Rejas) Entrada Mal Index
+GrhIndice=17968
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA799]
+Nombre=(CEMENTERIO)(Rejas) Entrada Mal Index
+GrhIndice=17967
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA800]
+Nombre=(CEMENTERIO)(Rejas) Medio Mal Index
+GrhIndice=17966
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA801]
+Nombre=(CEMENTERIO)(Rejas) Medio Mal Index
+GrhIndice=17965
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA802]
+Nombre=(CEMENTERIO)(Rejas) Medio Mal Index
+GrhIndice=17964
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA803]
+Nombre=(CEMENTERIO)(Rejas) Medio Mal Index
+GrhIndice=17963
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA804]
+Nombre=(CEMENTERIO)(Rejas) Medio Mal Index
+GrhIndice=17962
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA805]
+Nombre=(CEMENTERIO)(Rejas) Medio Mal Index
+GrhIndice=17961
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA806]
+Nombre=(CEMENTERIO)(Rejas) Medio Mal Index
+GrhIndice=17960
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA807]
+Nombre=(CEMENTERIO)(Rejas) Medio Mal Index
+GrhIndice=17959
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA808]
+Nombre=(CEMENTERIO)(Rejas) Medio Mal Index
+GrhIndice=17958
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA809]
+Nombre=(CEMENTERIO)(Rejas) Medio Mal Index
+GrhIndice=17957
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA810]
+Nombre=(CEMENTERIO)(Rejas) Costado Mal Index
+GrhIndice=17956
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA811]
+Nombre=(CEMENTERIO)(Angel)
+GrhIndice=17955
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA812]
+Nombre=(CEMENTERIO)(Puerta)
+GrhIndice=17951
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA813]
+Nombre=(CEMENTERIO)(Arbol)
+GrhIndice=17952
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA814]
+Nombre=(CEMENTERIO)(Arbol)
+GrhIndice=17953
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA815]
+Nombre=(CEMENTERIO)(Arbol)
+GrhIndice=17954
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA816]
+Nombre=(CEMENTERIO)(Muerto)
+GrhIndice=17943
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA817]
+Nombre=(CEMENTERIO)(Muerto)
+GrhIndice=17942
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA818]
+Nombre=(CEMENTERIO)(Muerto) Restos
+GrhIndice=17952
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA819]
+Nombre=(CEMENTERIO)(Muerto) Restos
+GrhIndice=17946
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA820]
+Nombre=(Dungeon Desierto)(Faraon)
+GrhIndice=1463
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA821]
+Nombre=(Dungeon Infierno)(huesos)
+GrhIndice=1538
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA822]
+Nombre=(Dungeon Infierno)(huesos)
+GrhIndice=1539
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA823]
+Nombre=(Dungeon Tierra)(Piso)
+GrhIndice=29896
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA824]
+Nombre=(Dungeon Tierra)(Pared)
+GrhIndice=29912
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA825]
+Nombre=(Dungeon Tierra)(Pared)
+GrhIndice=29928
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA826]
+Nombre=(Dungeon Tierra)(Pared)
+GrhIndice=29944
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA827]
+Nombre=(Dungeon Tierra)(Pared)
+GrhIndice=29960
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA828]
+Nombre=(Dungeon Tierra)(Pared)
+GrhIndice=29976
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA829]
+Nombre=(Dungeon Tierra)(Pared)
+GrhIndice=29976
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA830]
+Nombre=(Dungeon Tierra)(Pared)
+GrhIndice=29992
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA831]
+Nombre=(Dungeon Tierra)(Pared)
+GrhIndice=30008
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA832]
+Nombre=(Dungeon Tierra)(Pared)
+GrhIndice=30024
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA833]
+Nombre=(Dungeon Tierra)(Pared)
+GrhIndice=30040
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA834]
+Nombre=(Dungeon Tierra)(Pared)
+GrhIndice=30056
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA835]
+Nombre=(Dungeon Tierra)(Pared)
+GrhIndice=30072
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA836]
+Nombre=(Dungeon Tierra)(Pared)
+GrhIndice=30088
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA837]
+Nombre=(Dungeon Tierra)(Pared)
+GrhIndice=30104
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA838]
+Nombre=(ENTRADA)(Corona de Flores)
+GrhIndice=95
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA839]
+Nombre=(CEMENTERIO)(Cripta cerrada)
+GrhIndice=17949
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA840]
+Nombre=(CEMENTERIO)(Cripta chica cerrada)
+GrhIndice=17950
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA841]
+Nombre=(CEMENTERIO)(Cripta cerrada)
+GrhIndice=17947
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA842]
+Nombre=(CEMENTERIO)(Cripta cerrada)
+GrhIndice=17948
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA843]
+Nombre=(ENTRADA)(DOS)
+GrhIndice=19416
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA844]
+Nombre=(CEMENTERIO)(Cripta)
+GrhIndice=426
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA845]
+Nombre=(ENTRADA)()
+GrhIndice=22095
+Ancho=9
+Alto=13
+Capa=3
+[REFERENCIA846]
+Nombre=(ENTRADA)()
+GrhIndice=696
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA847]
+Nombre=(ENTRADA)()
+GrhIndice=4545
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA848]
+Nombre=(ENTRADA)()
+GrhIndice=4546
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA849]
+Nombre=(ENTRADA)()
+GrhIndice=4547
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA850]
+Nombre=(PORTON)(MADERA)
+GrhIndice=2176
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA851]
+Nombre=(PORTON)(MADERA)
+GrhIndice=2177
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA852]
+Nombre=(MONUMENTO)(OTTO WALLACE)
+GrhIndice=18995
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA853]
+Nombre=(MONUMENTO)(PANDA)
+GrhIndice=19714
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA854]
+Nombre=(MONUMENTO)(SIN NOMBRE)
+GrhIndice=9569
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA855]
+Nombre=(MONUMENTO)(GULFAS MORGOLOCK)
+GrhIndice=13963
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA856]
+Nombre=(MONUMENTO)(ANGEL)
+GrhIndice=4664
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA857]
+Nombre=(MONUMENTO)(ANGEL)
+GrhIndice=4665
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA858]
+Nombre=(MONUMENTO)(ANGEL)
+GrhIndice=4666
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA859]
+Nombre=(MONUMENTO)(MAGO)
+GrhIndice=4667
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA860]
+Nombre=(MONUMENTO)(MAGO)
+GrhIndice=4668
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA858]
+Nombre=(MONUMENTO)(MUJER)
+GrhIndice=679
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA859]
+Nombre=(MONUMENTO)(BUDA BANDER)
+GrhIndice=9205
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA860]
+Nombre=(MONUMENTO)(BUDA BANDER)
+GrhIndice=9206
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA861]
+Nombre=(MONUMENTO)(MAGO)
+GrhIndice=466
+Ancho=0
+Alto=0
+Capa=3
+[REFERENCIA862]
+Nombre=(PRD)(PARED) MONTAÑA
+GrhIndice=1052
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA863]
+Nombre=(PRD)(PARED) MONTAÑA
+GrhIndice=1068
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA864]
+Nombre=(PRD)(PARED) MONTAÑA
+GrhIndice=1084
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA865]
+Nombre=(NIEVE)(CAMINO) GASTADO
+GrhIndice=5681
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA866]
+Nombre=(NIEVE)(CAMINO) GASTADO
+GrhIndice=5697
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA865]
+Nombre=(NIEVE)(CAMINO) GASTADO
+GrhIndice=5713
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA865]
+Nombre=(NIEVE)(PISO)
+GrhIndice=2294
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA866]
+Nombre=(NIEVE)(CAMINO)(Horizontal)
+GrhIndice=7380
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA867]
+Nombre=(NIEVE)(CAMINO)(Horizontal)GASTADO
+GrhIndice=7412
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA865]
+Nombre=(Dungeon nevado)(piso)
+GrhIndice=7720
 Ancho=4
 Alto=4
 Capa=1
