Techos arboles y terreno
agrego techos 2 para nieve varios arboles el que pueda pongan a estos arboles como Objetos.

--- a/GrhIndex/indices.ini
+++ b/GrhIndex/indices.ini
@@ -1,5 +1,5 @@
 [INIT]
-Referencias=790
+Referencias=913
 
 [REFERENCIA0]
 Nombre=(PRD) Terreno
@@ -662,13 +662,13 @@ Ancho=0
 Alto=0
 Capa=1
 [REFERENCIA110]
-Nombre=(Animación)(AGUA)(CASCADA ROCA)
+Nombre=(AnimaciÃ³n)(AGUA)(CASCADA ROCA)
 GrhIndice=99
 Ancho=0
 Alto=0
 Capa=3
 [REFERENCIA111]
-Nombre=(Animación)(Barco Pirata)
+Nombre=(AnimaciÃ³n)(Barco Pirata)
 GrhIndice=18274
 Ancho=0
 Alto=0
@@ -823,13 +823,13 @@ Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA137]
-Nombre=(Animación)(AGUA)
+Nombre=(AnimaciÃ³n)(AGUA)
 GrhIndice=1505
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA138]
-Nombre=(Animación)(FOGATA)
+Nombre=(AnimaciÃ³n)(FOGATA)
 GrhIndice=1521
 Ancho=0
 Alto=0
@@ -853,19 +853,19 @@ Ancho=0
 Alto=0
 Capa=1
 [REFERENCIA142]
-Nombre=(MONTAÑA)1
+Nombre=(MONTAÃ‘A)1
 GrhIndice=7234
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA143]
-Nombre=(MONTAÑA 2)1
+Nombre=(MONTAÃ‘A 2)1
 GrhIndice=7250
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA144]
-Nombre=(MONTAÑA 3)1
+Nombre=(MONTAÃ‘A 3)1
 GrhIndice=7266
 Ancho=4
 Alto=4
@@ -2728,7 +2728,7 @@ Ancho=0
 Alto=0
 Capa=3
 [REFERENCIA454]
-Nombre=Animación) Casa(Herreria)  (HORNO)
+Nombre=AnimaciÃ³n) Casa(Herreria)  (HORNO)
 GrhIndice=30
 Ancho=0
 Alto=0
@@ -2776,7 +2776,7 @@ Ancho=0
 Alto=0
 Capa=3
 [REFERENCIA462]
-Nombre=(Animación) Casa(Carpa) ( Humo)
+Nombre=(AnimaciÃ³n) Casa(Carpa) ( Humo)
 GrhIndice=49
 Ancho=1
 Alto=1
@@ -3070,7 +3070,7 @@ Ancho=0
 Alto=0
 Capa=1
 [REFERENCIA509]
-Nombre=Casa(Pescaderia)(Porta Cañas)
+Nombre=Casa(Pescaderia)(Porta CaÃ±as)
 GrhIndice=4883
 Ancho=0
 Alto=0
@@ -3442,7 +3442,7 @@ Ancho=0
 Alto=0
 Capa=3
 [REFERENCIA571]
-Nombre=Maniquí
+Nombre=ManiquÃ­
 GrhIndice=4500
 Ancho=1
 Alto=1
@@ -3736,7 +3736,7 @@ Ancho=2
 Alto=2
 Capa=2
 [REFERENCIA620]
-Nombre=(Animación)Agua Clarita
+Nombre=(AnimaciÃ³n)Agua Clarita
 GrhIndice=5665
 Ancho=4
 Alto=4
@@ -4630,115 +4630,115 @@ Ancho=0
 Alto=0
 Capa=1
 [REFERENCIA768]
-Nombre=(Montaña ZeuS)(Costado)
+Nombre=(MontaÃ±a ZeuS)(Costado)
 GrhIndice=8201
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA769]
-Nombre=(Montaña ZeuS)(Costado)
+Nombre=(MontaÃ±a ZeuS)(Costado)
 GrhIndice=8217
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA770]
-Nombre=(Montaña ZeuS)(Piso Der)
+Nombre=(MontaÃ±a ZeuS)(Piso Der)
 GrhIndice=8233
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA771]
-Nombre=(Montaña ZeuS)(Piso Der) c/Pared
+Nombre=(MontaÃ±a ZeuS)(Piso Der) c/Pared
 GrhIndice=8249
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA772]
-Nombre=(Montaña ZeuS)(Piso Izq)
+Nombre=(MontaÃ±a ZeuS)(Piso Izq)
 GrhIndice=8264
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA773]
-Nombre=(Montaña ZeuS)(Piso Izqr) c/Pared
+Nombre=(MontaÃ±a ZeuS)(Piso Izqr) c/Pared
 GrhIndice=8281
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA774]
-Nombre=(Montaña ZeuS)(Entrada)
+Nombre=(MontaÃ±a ZeuS)(Entrada)
 GrhIndice=8297
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA775]
-Nombre=(Montaña ZeuS)(Pared Der)
+Nombre=(MontaÃ±a ZeuS)(Pared Der)
 GrhIndice=8313
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA776]
-Nombre=(Montaña ZeuS)(Pared Izq)
+Nombre=(MontaÃ±a ZeuS)(Pared Izq)
 GrhIndice=8329
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA777]
-Nombre=(Montaña ZeuS)(Pared Der) centro
+Nombre=(MontaÃ±a ZeuS)(Pared Der) centro
 GrhIndice=8345
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA778]
-Nombre=(Montaña ZeuS)(Pared Izq) cost
+Nombre=(MontaÃ±a ZeuS)(Pared Izq) cost
 GrhIndice=8377
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA779]
-Nombre=(Montaña ZeuS)(Pared)
+Nombre=(MontaÃ±a ZeuS)(Pared)
 GrhIndice=8393
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA780]
-Nombre=(Montaña ZeuS)(Piso)
+Nombre=(MontaÃ±a ZeuS)(Piso)
 GrhIndice=8409
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA781]
-Nombre=(Montaña ZeuS)(Piso centro) c/pared
+Nombre=(MontaÃ±a ZeuS)(Piso centro) c/pared
 GrhIndice=8425
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA782]
-Nombre=(Montaña ZeuS)(Piso centro) c/escalera
+Nombre=(MontaÃ±a ZeuS)(Piso centro) c/escalera
 GrhIndice=8441
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA783]
-Nombre=(Montaña ZeuS)(Piso centro) c/pared
+Nombre=(MontaÃ±a ZeuS)(Piso centro) c/pared
 GrhIndice=8457
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA784]
-Nombre=(Montaña ZeuS)(Piso centro) c/pared y esc
+Nombre=(MontaÃ±a ZeuS)(Piso centro) c/pared y esc
 GrhIndice=8473
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA785]
-Nombre=(Montaña ZeuS)(Piso centro) Esc
+Nombre=(MontaÃ±a ZeuS)(Piso centro) Esc
 GrhIndice=8489
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA786]
-Nombre=(Montaña ZeuS)(Piso centro) 
+Nombre=(MontaÃ±a ZeuS)(Piso centro) 
 GrhIndice=8505
 Ancho=4
 Alto=4
@@ -5212,19 +5212,19 @@ Ancho=0
 Alto=0
 Capa=3
 [REFERENCIA862]
-Nombre=(PRD)(PARED) MONTAÑA
+Nombre=(PRD)(PARED) MONTAÃ‘A
 GrhIndice=1052
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA863]
-Nombre=(PRD)(PARED) MONTAÑA
+Nombre=(PRD)(PARED) MONTAÃ‘A
 GrhIndice=1068
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA864]
-Nombre=(PRD)(PARED) MONTAÑA
+Nombre=(PRD)(PARED) MONTAÃ‘A
 GrhIndice=1084
 Ancho=4
 Alto=4
@@ -5265,9 +5265,314 @@ GrhIndice=7412
 Ancho=4
 Alto=4
 Capa=1
-[REFERENCIA865]
+[REFERENCIA868]
 Nombre=(Dungeon nevado)(piso)
 GrhIndice=7720
 Ancho=4
 Alto=4
 Capa=1
+[REFERENCIA869]
+Nombre=(NIEVE)(piso)
+GrhIndice=2294
+Ancho=4
+Alto=4
+Capa=1
+[REFERENCIA870]
+Nombre=(NIEVE) terreno
+GrhIndice=30120
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA871]
+Nombre=(NIEVE) terreno gastado 1
+GrhIndice=30136
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA872]
+Nombre=(NIEVE)  terreno gastado 2
+GrhIndice=30152
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA873]
+Nombre=(NIEVE)  terreno gastado 3
+GrhIndice=30168
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA874]
+Nombre=(NIEVE) terreno lomada abajo
+GrhIndice=30184
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA875]
+Nombre=(NIEVE) terreno lomada arriba
+GrhIndice=30200
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA876]
+Nombre=(NIEVE) terreno lomada derecha
+GrhIndice=30216
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA877]
+Nombre=(NIEVE) terreno lomada izquierda
+GrhIndice=30232
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA878]
+Nombre=(NIEVE) terreno esquina abajo
+GrhIndice=30248
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA879]
+Nombre=(NIEVE) terreno esquina arriba
+GrhIndice=30264
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA880]
+Nombre=(NIEVE) terreno esquina derecha
+GrhIndice=30280
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA881]
+Nombre=(NIEVE) terreno esquina izquierda
+GrhIndice=30296
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA882]
+Nombre=(NIEVE) terreno esquina 2 abajo
+GrhIndice=30312
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA883]
+Nombre=(NIEVE) terreno esquina 2 arriba
+GrhIndice=30328
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA884]
+Nombre=(NIEVE) terreno esquina 2 derecha
+GrhIndice=30344
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA885]
+Nombre=(NIEVE) terreno esquina 2 izquierda
+GrhIndice=30360
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA886]
+Nombre=(NIEVE) terreno Bajadas abajo
+GrhIndice=30376
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA887]
+Nombre=(NIEVE) terreno Bajadas arriba
+GrhIndice=30392
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA888]
+Nombre=(NIEVE) terreno Bajadas derecha
+GrhIndice=30408
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA889]
+Nombre=(NIEVE) terreno Bajadas izquierda
+GrhIndice=30424
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA890]
+Nombre=(NIEVE) Camino gastado izq
+GrhIndice=30440
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA891]
+Nombre=(NIEVE) Camino gastado medio
+GrhIndice=30456
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA892]
+Nombre=(NIEVE) Camino gastado der
+GrhIndice=30472
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA893]
+Nombre=(NIEVE) Camino gastado arriba
+GrhIndice=30488
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA894]
+Nombre=(NIEVE) Camino gastado medio
+GrhIndice=30504
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA895]
+Nombre=(NIEVE) Camino gastado abajo
+GrhIndice=30520
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA896]
+Nombre=(NIEVE) Camino curva abajo
+GrhIndice=30536
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA897]
+Nombre=(NIEVE) Camino curva abajo
+GrhIndice=30552
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA898]
+Nombre=(NIEVE) Camino curva arriba
+GrhIndice=30568
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA899]
+Nombre=(NIEVE) Camino curva arriba
+GrhIndice=30584
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA900]
+Nombre=(NIEVE) Camino desvio arriba
+GrhIndice=30600
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA901]
+Nombre=(NIEVE) Camino desvio abajo
+GrhIndice=30616
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA902]
+Nombre=(NIEVE) Camino desvio derecha
+GrhIndice=30632
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA903]
+Nombre=(NIEVE) Camino desvio izquierda
+GrhIndice=30648
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA904]
+Nombre=(NIEVE) Camino desvio en cruz
+GrhIndice=30664
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA905]
+Nombre=(NIEVE) Arbol
+GrhIndice=30680
+Ancho=1
+Alto=1
+Capa=3
+[REFERENCIA906]
+Nombre=(NIEVE) Arbol
+GrhIndice=30681
+Ancho=1
+Alto=1
+Capa=3
+[REFERENCIA907]
+Nombre=(NIEVE) Arbol
+GrhIndice=30682
+Ancho=1
+Alto=1
+Capa=3
+[REFERENCIA908]
+Nombre=(NIEVE) Arbol
+GrhIndice=30683
+Ancho=1
+Alto=1
+Capa=3
+[REFERENCIA909]
+Nombre=(NIEVE) Arbol
+GrhIndice=30684
+Ancho=1
+Alto=1
+Capa=3
+[REFERENCIA910]
+Nombre=(NIEVE) Arbol
+GrhIndice=30685
+Ancho=1
+Alto=1
+Capa=3
+[REFERENCIA911]
+Nombre=(NIEVE) Arbol
+GrhIndice=30686
+Ancho=1
+Alto=1
+Capa=3
+[REFERENCIA912]
+Nombre=(NIEVE) Casa Techo
+GrhIndice=30687
+Ancho=1
+Alto=1
+Capa=4
+[REFERENCIA913]
+Nombre=(NIEVE) Casa Techo
+GrhIndice=30688
+Ancho=1
+Alto=1
+Capa=4
