Subo las cosas del repo de @reyarb

--- a/Datos/indices.ini
+++ b/Datos/indices.ini
@@ -1,5 +1,5 @@
 [INIT]
-Referencias=913
+Referencias=1000
 
 [REFERENCIA0]
 Nombre=(PRD) Terreno
@@ -662,13 +662,13 @@ Ancho=0
 Alto=0
 Capa=1
 [REFERENCIA110]
-Nombre=(AnimaciÃ³n)(AGUA)(CASCADA ROCA)
+Nombre=(Animación)(AGUA)(CASCADA ROCA)
 GrhIndice=99
 Ancho=0
 Alto=0
 Capa=3
 [REFERENCIA111]
-Nombre=(AnimaciÃ³n)(Barco Pirata)
+Nombre=(Animación)(Barco Pirata)
 GrhIndice=18274
 Ancho=0
 Alto=0
@@ -823,17 +823,17 @@ Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA137]
-Nombre=(AnimaciÃ³n)(AGUA)
+Nombre=(Animación)(AGUA)
 GrhIndice=1505
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA138]
-Nombre=(AnimaciÃ³n)(FOGATA)
+Nombre=(Animación)(FOGATA)
 GrhIndice=1521
 Ancho=0
 Alto=0
-Capa=1
+Capa=3
 [REFERENCIA139]
 Nombre=(MURALLA) HORIZ
 GrhIndice=7231
@@ -853,19 +853,19 @@ Ancho=0
 Alto=0
 Capa=1
 [REFERENCIA142]
-Nombre=(MONTAÃ‘A)1
+Nombre=(MONTAÑA)1
 GrhIndice=7234
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA143]
-Nombre=(MONTAÃ‘A 2)1
+Nombre=(MONTAÑA 2)1
 GrhIndice=7250
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA144]
-Nombre=(MONTAÃ‘A 3)1
+Nombre=(MONTAÑA 3)1
 GrhIndice=7266
 Ancho=4
 Alto=4
@@ -1013,7 +1013,7 @@ Nombre=(PRD)(COSTA)(Angulo)
 GrhIndice=7315
 Ancho=2
 Alto=2
-Capa=1
+Capa=2
 [REFERENCIA169]
 Nombre=(CLOACA)Pozo tapado
 GrhIndice=5772
@@ -2143,73 +2143,73 @@ Nombre=(PRD)(COSTA)(Esquina)
 GrhIndice=7283
 Ancho=2
 Alto=2
-Capa=1
+Capa=2
 [REFERENCIA357]
 Nombre=(PRD)(COSTA)(Esquina)
 GrhIndice=7287
 Ancho=2
 Alto=2
-Capa=1
+Capa=2
 [REFERENCIA358]
 Nombre=(PRD)(COSTA)(Esquina)
 GrhIndice=7291
 Ancho=2
 Alto=2
-Capa=1
+Capa=2
 [REFERENCIA359]
 Nombre=(PRD)(COSTA)(Esquina)
 GrhIndice=7295
 Ancho=2
 Alto=2
-Capa=1
+Capa=2
 [REFERENCIA360]
 Nombre=(PRD)(COSTA)(Angulo)
 GrhIndice=7299
 Ancho=2
 Alto=2
-Capa=1
+Capa=2
 [REFERENCIA361]
 Nombre=(PRD)(COSTA)(Angulo)
 GrhIndice=7303
 Ancho=2
 Alto=2
-Capa=1
+Capa=2
 [REFERENCIA362]
 Nombre=(PRD)(COSTA)(Costado)
 GrhIndice=7307
 Ancho=2
 Alto=2
-Capa=1
+Capa=2
 [REFERENCIA363]
 Nombre=(PRD)(COSTA)(Angulo)
 GrhIndice=7311
 Ancho=2
 Alto=2
-Capa=1
+Capa=2
 [REFERENCIA364]
 Nombre=(PRD)(COSTA)(Angulo)
 GrhIndice=7315
 Ancho=2
 Alto=2
-Capa=1
+Capa=2
 [REFERENCIA365]
 Nombre=(PRD)(COSTA)(Costrado)
 GrhIndice=7319
 Ancho=2
 Alto=2
-Capa=1
+Capa=2
 [REFERENCIA366]
 Nombre=(PRD)(COSTA)(Costado)
 GrhIndice=7323
 Ancho=2
 Alto=2
-Capa=1
+Capa=2
 [REFERENCIA367]
 Nombre=(PRD)(COSTA)(Costado)
 GrhIndice=7327
 Ancho=2
 Alto=2
-Capa=1
+Capa=2
 [REFERENCIA368]
 Nombre=(DESIERTO)(Costa Arena)(Angulo)
 GrhIndice=7331
@@ -2728,7 +2728,7 @@ Ancho=0
 Alto=0
 Capa=3
 [REFERENCIA454]
-Nombre=AnimaciÃ³n) Casa(Herreria)  (HORNO)
+Nombre=Animación) Casa(Herreria)  (HORNO)
 GrhIndice=30
 Ancho=0
 Alto=0
@@ -2776,7 +2776,7 @@ Ancho=0
 Alto=0
 Capa=3
 [REFERENCIA462]
-Nombre=(AnimaciÃ³n) Casa(Carpa) ( Humo)
+Nombre=(Animación) Casa(Carpa) ( Humo)
 GrhIndice=49
 Ancho=1
 Alto=1
@@ -3070,7 +3070,7 @@ Ancho=0
 Alto=0
 Capa=1
 [REFERENCIA509]
-Nombre=Casa(Pescaderia)(Porta CaÃ±as)
+Nombre=Casa(Pescaderia)(Porta Cañas)
 GrhIndice=4883
 Ancho=0
 Alto=0
@@ -3346,7 +3346,7 @@ Ancho=0
 Alto=0
 Capa=1
 [REFERENCIA555]
-Nombre=Banco Adornado
+Nombre=Banco Iglesia Adornado (Muebles)
 GrhIndice=274
 Ancho=0
 Alto=0
@@ -3442,7 +3442,7 @@ Ancho=0
 Alto=0
 Capa=3
 [REFERENCIA571]
-Nombre=ManiquÃ­
+Nombre=Maniquí
 GrhIndice=4500
 Ancho=1
 Alto=1
@@ -3736,7 +3736,7 @@ Ancho=2
 Alto=2
 Capa=2
 [REFERENCIA620]
-Nombre=(AnimaciÃ³n)Agua Clarita
+Nombre=(Animación)Agua Clarita
 GrhIndice=5665
 Ancho=4
 Alto=4
@@ -4095,30 +4095,35 @@ GrhIndice=26094
 Ancho=0
 Alto=0
 Capa=3
+
 [REFERENCIA679]
 Nombre=(Monumento)(Torre)
 GrhIndice=20170
 Ancho=0
 Alto=0
 Capa=3
+
 [REFERENCIA680]
 Nombre=(Monumento)(Torre)
 GrhIndice=20171
 Ancho=0
 Alto=0
 Capa=3
+
 [REFERENCIA681]
 Nombre=(Horno)(tipo panaderia)
 GrhIndice=20172
 Ancho=0
 Alto=0
 Capa=3
+
 [REFERENCIA682]
 Nombre=(DUNGEON)(Malaheing)1 grafico esquina
 GrhIndice=18260
 Ancho=0
 Alto=0
 Capa=1
+
 [REFERENCIA683]
 Nombre=(DUNGEON)(Malaheing)1 grafico esquina
 GrhIndice=18261
@@ -4630,115 +4635,115 @@ Ancho=0
 Alto=0
 Capa=1
 [REFERENCIA768]
-Nombre=(MontaÃ±a ZeuS)(Costado)
+Nombre=(Montaña ZeuS)(Costado)
 GrhIndice=8201
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA769]
-Nombre=(MontaÃ±a ZeuS)(Costado)
+Nombre=(Montaña ZeuS)(Costado)
 GrhIndice=8217
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA770]
-Nombre=(MontaÃ±a ZeuS)(Piso Der)
+Nombre=(Montaña ZeuS)(Piso Der)
 GrhIndice=8233
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA771]
-Nombre=(MontaÃ±a ZeuS)(Piso Der) c/Pared
+Nombre=(Montaña ZeuS)(Piso Der) c/Pared
 GrhIndice=8249
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA772]
-Nombre=(MontaÃ±a ZeuS)(Piso Izq)
+Nombre=(Montaña ZeuS)(Piso Izq)
 GrhIndice=8264
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA773]
-Nombre=(MontaÃ±a ZeuS)(Piso Izqr) c/Pared
+Nombre=(Montaña ZeuS)(Piso Izqr) c/Pared
 GrhIndice=8281
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA774]
-Nombre=(MontaÃ±a ZeuS)(Entrada)
+Nombre=(Montaña ZeuS)(Entrada)
 GrhIndice=8297
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA775]
-Nombre=(MontaÃ±a ZeuS)(Pared Der)
+Nombre=(Montaña ZeuS)(Pared Der)
 GrhIndice=8313
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA776]
-Nombre=(MontaÃ±a ZeuS)(Pared Izq)
+Nombre=(Montaña ZeuS)(Pared Izq)
 GrhIndice=8329
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA777]
-Nombre=(MontaÃ±a ZeuS)(Pared Der) centro
+Nombre=(Montaña ZeuS)(Pared Der) centro
 GrhIndice=8345
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA778]
-Nombre=(MontaÃ±a ZeuS)(Pared Izq) cost
+Nombre=(Montaña ZeuS)(Pared Izq) cost
 GrhIndice=8377
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA779]
-Nombre=(MontaÃ±a ZeuS)(Pared)
+Nombre=(Montaña ZeuS)(Pared)
 GrhIndice=8393
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA780]
-Nombre=(MontaÃ±a ZeuS)(Piso)
+Nombre=(Montaña ZeuS)(Piso)
 GrhIndice=8409
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA781]
-Nombre=(MontaÃ±a ZeuS)(Piso centro) c/pared
+Nombre=(Montaña ZeuS)(Piso centro) c/pared
 GrhIndice=8425
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA782]
-Nombre=(MontaÃ±a ZeuS)(Piso centro) c/escalera
+Nombre=(Montaña ZeuS)(Piso centro) c/escalera
 GrhIndice=8441
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA783]
-Nombre=(MontaÃ±a ZeuS)(Piso centro) c/pared
+Nombre=(Montaña ZeuS)(Piso centro) c/pared
 GrhIndice=8457
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA784]
-Nombre=(MontaÃ±a ZeuS)(Piso centro) c/pared y esc
+Nombre=(Montaña ZeuS)(Piso centro) c/pared y esc
 GrhIndice=8473
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA785]
-Nombre=(MontaÃ±a ZeuS)(Piso centro) Esc
+Nombre=(Montaña ZeuS)(Piso centro) Esc
 GrhIndice=8489
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA786]
-Nombre=(MontaÃ±a ZeuS)(Piso centro) 
+Nombre=(Montaña ZeuS)(Piso centro) 
 GrhIndice=8505
 Ancho=4
 Alto=4
@@ -5212,19 +5217,19 @@ Ancho=0
 Alto=0
 Capa=3
 [REFERENCIA862]
-Nombre=(PRD)(PARED) MONTAÃ‘A
+Nombre=(PRD)(PARED) MONTAÑA
 GrhIndice=1052
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA863]
-Nombre=(PRD)(PARED) MONTAÃ‘A
+Nombre=(PRD)(PARED) MONTAÑA
 GrhIndice=1068
 Ancho=4
 Alto=4
 Capa=1
 [REFERENCIA864]
-Nombre=(PRD)(PARED) MONTAÃ‘A
+Nombre=(PRD)(PARED) MONTAÑA
 GrhIndice=1084
 Ancho=4
 Alto=4
@@ -5528,51 +5533,668 @@ GrhIndice=30680
 Ancho=1
 Alto=1
 Capa=3
+
 [REFERENCIA906]
 Nombre=(NIEVE) Arbol
 GrhIndice=30681
 Ancho=1
 Alto=1
 Capa=3
+
 [REFERENCIA907]
 Nombre=(NIEVE) Arbol
 GrhIndice=30682
 Ancho=1
 Alto=1
 Capa=3
+
 [REFERENCIA908]
 Nombre=(NIEVE) Arbol
 GrhIndice=30683
 Ancho=1
 Alto=1
 Capa=3
+
 [REFERENCIA909]
 Nombre=(NIEVE) Arbol
 GrhIndice=30684
 Ancho=1
 Alto=1
 Capa=3
+
 [REFERENCIA910]
 Nombre=(NIEVE) Arbol
 GrhIndice=30685
 Ancho=1
 Alto=1
 Capa=3
+
 [REFERENCIA911]
 Nombre=(NIEVE) Arbol
 GrhIndice=30686
 Ancho=1
 Alto=1
 Capa=3
+
 [REFERENCIA912]
 Nombre=(NIEVE) Casa Techo
 GrhIndice=30687
 Ancho=1
 Alto=1
-Capa=4
+Capa=3
+
 [REFERENCIA913]
 Nombre=(NIEVE) Casa Techo
 GrhIndice=30688
 Ancho=1
 Alto=1
-Capa=4
+Capa=3
+
+[REFERENCIA914]
+Nombre=(ARBOL)
+GrhIndice=32469
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA915]
+Nombre=(ARBOL)
+GrhIndice=32470
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA916]
+Nombre=(ARBOL)
+GrhIndice=32471
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA917]
+Nombre=(ARBOL)
+GrhIndice=32472
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA918]
+Nombre=(ARBOL)
+GrhIndice=32473
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA919]
+Nombre=(ARBOL)
+GrhIndice=32474
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA920]
+Nombre=(ARBOL)
+GrhIndice=32475
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA921]
+Nombre=(ARBOL)
+GrhIndice=32476
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA922]
+Nombre=(ARBOL)
+GrhIndice=32477
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA923]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32478
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA924]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32479
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA925]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32480
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA926]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32481
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA927]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32482
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA928]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32483
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA929]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32484
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA930]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32485
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA931]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32486
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA932]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32487
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA933]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32488
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA934]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32489
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA935]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32490
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA936]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32491
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA937]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32492
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA938]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32493
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA939]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32494
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA940]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32495
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA941]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32496
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA942]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32497
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA943]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32498
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA944]
+Nombre=(ARBOL)(Cantero)
+GrhIndice=32499
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA945]
+Nombre=(ARBOL)Tronco
+GrhIndice=32500
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA946]
+Nombre=(ARBOL)
+GrhIndice=32501
+Ancho=1
+Alto=1
+Capa=3
+
+[REFERENCIA947]
+Nombre=(CUEVAS) (NORTE) Piso
+GrhIndice=32502
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA948]
+Nombre=(CUEVAS) (NORTE) Salidas
+GrhIndice=32518
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA949]
+Nombre=(CUEVAS) (NORTE) Salidas
+GrhIndice=32534
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA950]
+Nombre=(CUEVAS) (NORTE) Salidas
+GrhIndice=32550
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA951]
+Nombre=(CUEVAS) (NORTE) Salidas
+GrhIndice=32566
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA952]
+Nombre=(CUEVAS) (NORTE) Pared
+GrhIndice=32582
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA953]
+Nombre=(CUEVAS) (NORTE) Pared
+GrhIndice=32598
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA954]
+Nombre=(CUEVAS) (NORTE) Pared
+GrhIndice=32614
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA955]
+Nombre=(CUEVAS) (NORTE) Pared
+GrhIndice=32630
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA956]
+Nombre=(CUEVAS) (NORTE) Angulo
+GrhIndice=32646
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA957]
+Nombre=(CUEVAS) (NORTE) Angulo
+GrhIndice=32662
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA958]
+Nombre=(CUEVAS) (NORTE) Angulo
+GrhIndice=32678
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA959]
+Nombre=(CUEVAS) (NORTE) Angulo
+GrhIndice=32694
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA960]
+Nombre=(CUEVAS) (NORTE) Esquinas
+GrhIndice=32710
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA961]
+Nombre=(CUEVAS) (NORTE) Esquinas
+GrhIndice=32726
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA962]
+Nombre=(CUEVAS) (NORTE) Esquinas
+GrhIndice=32742
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA963]
+Nombre=(CUEVAS) (NORTE) Esquinas
+GrhIndice=32758
+Ancho=4
+Alto=4
+Capa=1
+
+[REFERENCIA964]
+Nombre=(Cartel) Monturas
+GrhIndice=6856
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA965]
+Nombre=Galeon
+GrhIndice=25819
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA966]
+Nombre=Galeon
+GrhIndice=25820
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA967]
+Nombre=Galeon
+GrhIndice=25821
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA968]
+Nombre=Galeon
+GrhIndice=25822
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA969]
+Nombre=Barca
+GrhIndice=25719
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA970]
+Nombre=Barca
+GrhIndice=25720
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA971]
+Nombre=Barca
+GrhIndice=25721
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA972]
+Nombre=Barca
+GrhIndice=25722
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA973]
+Nombre=Galera
+GrhIndice=26066
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA974]
+Nombre=Galera
+GrhIndice=26067
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA975]
+Nombre=Galera
+GrhIndice=26068
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA976]
+Nombre=Galera
+GrhIndice=26069
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA977]
+Nombre=Barco Fantasma
+GrhIndice=10443
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA978]
+Nombre=Barco Fantasma
+GrhIndice=10440
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA979]
+Nombre=Barco Fantasma
+GrhIndice=10441
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA980]
+Nombre=Barco Fantasma
+GrhIndice=10442
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA981]
+Nombre=Cofre de Tesoros (Abierto)
+GrhIndice=6757
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA982]
+Nombre=Cofre de Tesoros (Cerrado)
+GrhIndice=495
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA983]
+Nombre=Telaraña (Izq.)
+GrhIndice=1494
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA984]
+Nombre=Telaraña (Der.)
+GrhIndice=1495
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA985]
+Nombre=Telaraña (Medio)
+GrhIndice=404
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA986]
+Nombre=Organo de Tubos (Phantom of the Opera) (Muebles)
+GrhIndice=1477
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA987]
+Nombre=Salamandra (Chimenea) (Muebles)
+GrhIndice=30
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA988]
+Nombre=Baranda Muelle Horizontal
+GrhIndice=12403
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA989]
+Nombre=Baranda Muelle Vertical Izq.
+GrhIndice=12406
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA990]
+Nombre=Baranda Muelle Vertical Der.
+GrhIndice=12420
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA991]
+Nombre=Banqueta (Muebles)
+GrhIndice=1498
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA992]
+Nombre=Banco Iglesia (Muebles)
+GrhIndice=5747
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA993]
+Nombre=Silla Real (Muebles)
+GrhIndice=2130
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA994]
+Nombre=Silla Real (Muebles)
+GrhIndice=2131
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA995]
+Nombre=Silla Real (Muebles)
+GrhIndice=2132
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA996]
+Nombre=Silla Real (Muebles)
+GrhIndice=2133
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA997]
+Nombre=Mesa Real (Muebles)
+GrhIndice=1504
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA998]
+Nombre=Mesa de Comedor (Muebles)
+GrhIndice=1475
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA999]
+Nombre=Vela (Muebles)
+GrhIndice=12727
+Ancho=0
+Alto=0
+Capa=3
+
+[REFERENCIA1000]
+Nombre=Hojas de Arbol
+GrhIndice=1524
+Ancho=0
+Alto=0
+Capa=3
