--- a/WorldEditor.ini
+++ b/WorldEditor.ini
@@ -1,27 +1,50 @@
+[INDEX]
+MaxGrhs=32767
+
+[PATH1]
+UltimoMapa=E:\Google Drive\AODrag 9\servidor\maps\Mapa119.csm
+DirIndex=C:\Users\Administrador\Desktop\AO1024\ao-cliente\INIT
+DirDats=C:\Users\Administrador\Desktop\AO1024\ao-server\Dat
+
+[PATH2]
+UltimoMapa=C:\Users\manue\Google Drive\AODrag 9\servidor\maps\Mapa119.csm
+DirIndex=C:\Users\Administrador\Desktop\AO1024\ao-cliente\INIT
+DirDats=C:\Users\Administrador\Desktop\AO1024\ao-server\Dat
+
 [CONFIGURACION]
-AutoCapturarSup=0
-AutoCapturarTrans=1
-GuardarConfig=1
 ObjTranslado=378
-UtilizarDeshacer=1
+GuardarConfig=1
+AutoCapturarTrans=1
+AutoCapturarSup=1
+UtilizarDeshacer=0
 
 [MOSTRAR]
-Bloqueos=0
-Capa2=1
+LastPos=50-50
+ControlAutomatico=1
+Capa2=1	
 Capa3=1
 Capa4=0
-ControlAutomatico=1
 Grilla=0
-LastPos=50-50
-NPCs=1
+Triggers=0
+Bloqueos=0
+Translados=0
 Objetos=1
-Translados=1
-Triggers=1
+NPCs=1
 
+'----------------------
+PantallaX=19
+PantallaY=30
+'----------------------
+' AYUDA:
+' en 800x600 se usa X = 14 y Y = 16
+' en 1024x768 se usa X = 19 y Y = 22.
+'----------------------
+' el valor minimo es 3 en ambos.
+' el valor maximo en X es 23 y en Y es 32.
+'----------------------
+
+ClienteHeight=17
+ClienteWidth=22
+' Configuracion grafica del cliente necesaria para detectar los bordes legales del mapa.
 [PATH]
-UltimoMapa=
-
-[RENDER]
-ClienteHeight=13
-ClienteWidth=17
-
+UltimoMapa=C:\Users\Administrador\Desktop\AO1024\WE-Lorwik\Conversor\Mapas Long\Mapa1.map
